# musicdb

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  musicdb.desktop  package-lock.json  package.json  resume  vite.config.ts
.claude/commands/: release.md
.cursor/skills/release-musicdb/: SKILL.md
.forgejo/workflows/: build.yml
.gemini/skills/musicdb-release/: SKILL.md
.github/workflows/: build.yml
docs/: building.md  user-guide.md
src/: App.vue  main.ts  types.ts  vite-env.d.ts
src-tauri/: .env  Cargo.toml  dev.sqlite  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_add_time_archive.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: artists.rs  cover_art.rs  export.rs  genres.rs  import.rs  items.rs  mod.rs  musicbrainz.rs  settings.rs
src-tauri/src/models/: artist.rs  genre.rs  import.rs  item.rs  mod.rs  settings.rs  track.rs
src/assets/styles/: main.css
src/components/collection/: FilterPanel.vue  ItemGrid.vue  ItemList.vue
src/components/item/: ArtistField.vue  CoverArtPicker.vue  ItemForm.vue
src/components/layout/: AppFooter.vue  AppHeader.vue  AppSidebar.vue
src/composables/: useKeyboard.ts  useTheme.ts
src/i18n/: de.json  en.json  es.json  fr.json  nl.json
src/router/: index.ts
src/stores/: artists.ts  collection.ts  settings.ts  ui.ts  update.ts
src/views/: AddItemView.vue  ArtistDetailView.vue  CollectionView.vue  ImportView.vue  ItemDetailView.vue  SearchView.vue  SettingsView.vue  StatisticsView.vue
(+5 files in other folders)
