[package]
name = "musicdb"
version = "0.1.0"
description = "Music Collection Manager"
authors = []
edition = "2021"

[lib]
name = "musicdb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
csv = "1"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"
base64 = "0.22"
urlencoding = "2"
lofty = "0.22"
walkdir = "2"

